# synesthesia

./: Cargo.toml
src/: audio.rs  control.rs  jack_src.rs  lib.rs  midi.rs
