[package]
name = "synesthesia"
version = "0.1.0"
authors = ["Curtis Maves <curtismaves@gmail.com>"]
edition = "2018"

[[bin]]
name = "flatstack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bluetooth"]

rpi = ["lecp/rpi"]
bluetooth = ["lecp/bluetooth", "rustable"]

[dependencies]
# lecp = {git="https://github.com/cmaves/lecp.git"}
rustable = { git = "https://github.com/cmaves/rustable.git", optional = true, branch = "async" }
lecp = {path="/home/cmaves/lecp" }
#ham = {git="https://github.com/cmaves/ham.git", optional=true }
ham = {path="/home/cmaves/ham", optional=true }
async-std = "1.9"
jack = { version = "0.6.0", optional = true }
clap = "2.33"
rustfft = "3.0.1"
lazy_static = "1.4.0"
gpio-cdev = "0.2.0"
spidev = "0.4.0"

[profile.release]
lto = true
